Fix align expand sidebar

--- a/src/css/components/_side-nav.scss
+++ b/src/css/components/_side-nav.scss
@@ -25,7 +25,10 @@
     }
 
     label {
+      font-size: inherit;
+      line-height: 1;
       margin-left: 8px;
+      max-height: 17px;
     }
 
     .scylla-icon--expand {
@@ -72,10 +75,6 @@
       padding-bottom: 24px;
 
       &.has-children {
-        a {
-          max-width: 80%;
-        }
-
         &.current {
           padding-bottom: 20px;
         }
